<resources>
    <string name="app_name">Weppic</string>
    <string name="default_notification_channel_id">default</string>
    <string name="title_activity_navigation">Today</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Weppic</string>
    <string name="nav_header_subtitle">www.weppic.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Calender</string>
    <string name="menu_slideshow">EOM</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Sign Out</string>
    <string name="menu_send">Contact Us</string>
</resources>
